aks-survival-pack/demo1-healthprobes-azurepolicy/aks-helloworld-app/aks-hw-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one
  namespace: aks-helloworld  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        resources:
          limits:
            cpu: 150m
            memory: 150Mi
          requests:
            cpu: 150m
            memory: 150Mi
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
            httpGet:
              path: /
              port: http
        readinessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one
  namespace: aks-helloworld
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: aks-helloworld-one
